--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# API Keys (already in .env, but double-check)
+*.key
+*.pem
+
 # Next.js
 .next
 
